# triageiq

./: .env.example  .gitignore  CONTRIBUTING.md  DECISIONS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  run.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0e088236c8d5_sync_uuid_type.py  16bd54e2bbaf_update_entitites.py  513d6860a8a7_initial_schema.py  7bedc6b97bb0_clean_schema.py  88c7a8443811_add_real_time_db.py  9c7c58131850_add_real_time_db.py  ba63a453d541_update_user_entity.py
app/: config.py  dependencies.py  main.py
app/application/services/: admin_service.py  analytics_service.py  auth_service.py  chat_service.py  ticket_service.py
app/domain/: __init__.py  enums.py
app/domain/entities/: audit_log.py  message.py  ticket.py  user.py
app/infrastructure/: database.py  firebase_client.py  redis_client.py
app/infrastructure/ai/: openai_client.py
app/infrastructure/security/: jwt_handler.py  password_handler.py
app/presentation/routers/: admin.py  analytics.py  auth.py  chat_router.py  ticket.py
app/presentation/schemas/: admin_schemas.py  auth_schemas.py  chat_schemas.py  ticket_schemas.py
app/repositories/: audit_log_repository.py  chat_repository.py  refresh_token_repository.py  ticket_repository.py  user_repository.py
backend/: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DECISIONS.md  alembic.ini  entrypoint.sh
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 7bedc6b97bb0_clean_schema.py  88c7a8443811_add_real_time_db.py  9c7c58131850_add_real_time_db.py  ba63a453d541_update_user_entity.py
backend/app/: dependencies.py  main.py
backend/app/application/services/: admin_service.py  auth_service.py  chat_service.py  ticket_service.py
backend/app/domain/entities/: ticket.py
backend/app/infrastructure/: database.py  firebase_client.py
backend/app/infrastructure/security/: jwt_handler.py  password_handler.py
backend/app/presentation/routers/: admin.py  auth.py  chat_router.py  ticket.py
backend/app/presentation/schemas/: admin_schemas.py  auth_schemas.py  chat_schemas.py  ticket_schemas.py
backend/app/repositories/: ticket_repository.py
backend/scripts/: seed_superadmin.py
backend/tests/unit/: test_chat_feature.py  test_service.py
docker/: Dockerfile  docker-compose.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/layout/: Navbar.tsx  ProtectedLayout.tsx
frontend/src/components/ui/: loading.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: AdminPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  LoginPage.tsx  NewTicketPage.tsx  ProfilePage.tsx  RegisterPage.tsx  TicketDetailPage.tsx  TicketsPage.tsx
frontend/src/types/: admin.ts  ticket.ts
scripts/: seed_superadmin.py
tests/: conftest.py
tests/integration/: test_api_flows.py
tests/unit/: test_auth_service.py  test_chat_feature.py  test_core.py  test_service.py
